<resources>
    <string name="app_name">V E H I C L E  \tI O</string>


    /*
    Main menu
    */
    <string name="vehicleLabel">V E H I C L E  A P P</string>
    <string name="loginButton">L O G I N</string>
    <string name="postDataStart">A D D  V E H I C L E</string>
    <string name="showVehicles">V I E W  V E H I C L E S</string>

    /*
    Post data
    */
    <string name="sendVehicle">S E N D  V E H I C L E</string>
    <string name="postDataLabel">U P L O A D   D A T A</string>
    <string name="vehicleModelEdit">Model...</string>
    <string name="vehicleMakeEdit">Make...</string>
    <string name="vehicleYearEdit">Year...</string>
    <string name="vehiclePriceEdit">Price...</string>
    <string name="vehicleLicenseNumberEdit">License Number...</string>
    <string name="vehicleColourEdit">Colour...</string>
    <string name="vehicleNumberDoorsEdit">Number of Doors</string>
    <string name="vehicleTransmissionEdit">Transmission</string>
    <string name="vehicleMileageEdit">Mileage...</string>
    <string name="vehicleFuelTypeEdit">Fuel Type...</string>
    <string name="vehicleBodyStyleEdit">Body Style...</string>
    <string name="vehicleEngineSizeEdit">Engine Size...</string>
    <string name="vehicleConditionEdit">Condition...</string>
    <string name="vehicleNotesEdit">Notes...</string>


    /*
    View vehicles
    */
    <string name="viewVehiclesButton">View All Vehicles</string>

    /*
    Splash
    */
    <string name="vehicleIO">V E H I C L E \n\t\t\t\t\t\t\tI O</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    /*
    Login
    */
    <string name="LoginLabel">L O G I N</string>
    <string name="userName">Username...</string>
    <string name="password">Password...</string>
    <string name="apiKeyLabel">API Key...</string>
</resources>
