<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".UpdateActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="395dp"
        android:layout_height="651dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/vehicleNotesEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleNotesEdit"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.941" />

            <EditText
                android:id="@+id/vehicleConditionEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleConditionEdit"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.874" />

            <EditText
                android:id="@+id/vehicleBodyStyleEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleBodyStyleEdit"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.807" />

            <EditText
                android:id="@+id/vehicleEngineSizeEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleEngineSizeEdit"
                android:inputType="number"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.74" />

            <EditText
                android:id="@+id/vehicleFuelType2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleFuelTypeEdit"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.673" />

            <EditText
                android:id="@+id/vehicleMileageEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleMileageEdit"
                android:inputType="number"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.605" />

            <EditText
                android:id="@+id/vehicleTransmissionEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleTransmissionEdit"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.538" />

            <EditText
                android:id="@+id/vehicleNumberDoorsEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleNumberDoorsEdit"
                android:inputType="number"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.471" />

            <EditText
                android:id="@+id/vehicleColourEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleColourEdit"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.404" />

            <EditText
                android:id="@+id/vehiclePriceEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehiclePriceEdit"
                android:inputType="number"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.27" />

            <EditText
                android:id="@+id/vehicleLicenseEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleLicenseNumberEdit"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.335" />

            <EditText
                android:id="@+id/vehicleModelEd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleModelEdit"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.068" />

            <EditText
                android:id="@+id/vehicleYearEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleYearEdit"
                android:inputType="number"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.135" />

            <EditText
                android:id="@+id/vehicleMakeEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/vehicleMakeEdit"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/backColour"
                android:textColorHint="@color/backColour"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.201" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>